test/features/errors/semantic/e1050_disallowed_coercion.spl
# E1050: Disallowed Coercion

Feature: E1050 - Type Coercion Not Allowed
  As a Simple compiler
  I want to detect disallowed type coercions
  So that type conversions are explicit

  Background:
    Given I have the Simple compiler

  Scenario: Integer to boolean coercion
    When I compile:
      '''
      fn test():
        val x: i32 = 42
        val b: bool = x  # Error: no implicit conversion
      '''
    Then I should see error E1050 at line 3
    And the error message should be "type coercion from `{from}` to `{to}` is not allowed"
    And the label should indicate "invalid coercion"
    And the help should suggest "use explicit conversion instead"

  Scenario: String to number coercion
    When I compile:
      '''
      fn test():
        val s = "42"
        val n: i32 = s  # Error
      '''
    Then I should see error E1050

  Scenario: Valid explicit conversion
    When I compile:
      '''
      fn test():
        val x = 42
        val s = x.to_string()  # OK: explicit
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val x: i32 = 42
        val b: bool = x
      '''
    Then I should see error E1050
    And the error message should contain "허용되지 않는 강제 변환"
